# DiRL

./: .gitignore  README.md  download.sh  index.html  pyproject.toml
accelerate_configs/: deepspeed_zero1.yaml  multi_gpus.yaml
configs/: eval.yaml
examples/: example-dapo.sh  example-eval.sh  example-grpo-custom.sh  example-grpo.sh  example-sft.sh
llama_factory_sdar/data/: dataset_info.json
llama_factory_sdar/examples/train_full_sdar/sdar_8b/: sft_sdar_8b.yaml
llama_factory_sdar/s1k_cache/train/: dataset_info.json  state.json
llama_factory_sdar/sdar_ckpt/sdar_8b_math_s1k/full/sft/: trainer_log.jsonl
lmdeploy/: pyproject.toml
models/: __init__.py
models/sdar/: modeling_sdar.py
reasoning/: test.py  test.sh
scripts/: dapo.sh  eval.sh  eval_template.sh  grpo.sh
static/css/: index.css
static/js/: index.js
train/: dapo.py  grpo.py  rl.py  rollout_dapo_server.py  sample_api.py
