[project]
name = "dirl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.7.0",
    "datasets==3.6.0",
    "deepspeed==0.16.9",
    "fastapi==0.121.1",
    "gradio>=6.2.0",
    "huggingface-hub==0.35.3",
    "jetengine>=0.1.0",
    "latex2sympy2-extended==1.10.2",
    "liger-kernel==0.6.2",
    "lmdeploy",
    "math-verify==0.8.0",
    "matplotlib>=3.10.8",
    "mmengine-lite==0.10.7",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "openai>=2.14.0",
    "openai-harmony>=0.0.8",
    "packaging==24.2",
    "partial-json-parser>=0.2.1.1.post7",
    "peft==0.15.2",
    "pillow==12.0.0",
    "pydantic==2.12.4",
    "ray>=2.53.0",
    "regex==2024.11.6",
    "requests==2.32.5",
    "rouge==1.0.1",
    "shortuuid==1.0.13",
    "swift==2.36.0",
    "sympy==1.14.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "transformers==4.52.4",
    "trl==0.9.6",
    "typing-extensions>=4.15.0",
    "uvicorn==0.38.0",
    "wandb>=0.23.0",
    "zmq>=0.0.0",
    # "flash-attn",
]

[tool.uv.sources]
lmdeploy = { workspace = true }

[tool.uv.workspace]
members = [
    "lmdeploy",
]
